# Principium

./: README.md  build.ps1  compile_commands.json  meson.build
src/core/: main.c  main.h
src/gameplay/: game.c  game.h  objects.h
src/gameplay/objects/: circle.c  circle.h
src/graphics/: render.c  render.h
src/objects/: background.c  background.h  circle.c  circle.h  stats.c  stats.h
